@@ -118,6 +118,7 @@ Terry Carroll
 Donn Cave
 Per Cederqvist
 Octavian Cerna
+Pascal Chambon
 Hye-Shik Chang
 Jeffrey Chang
 Mitch Chapman
